--- a/style.scss
+++ b/style.scss
@@ -1,23 +1,40 @@
 @import "scss_src/reboot";
 
+$section_width: 80%;
+
 body {
     background-color: #4a647f;
-    padding: 3rem;
+    //padding: 3rem;
 }
 header {
+    width: $section_width;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
     nav {
         display: flex;
         background-color: white;
         align-items: center;
         $height: 3rem;
         height: $height;
+        font-size: 75%;
         .menu {
-            display: block;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
             width: $height;
             height: $height;
             background-color: #56ccc8;
-            &::before {
-                content: "";
+            padding: 1rem;
+            .line {
+                height: 15%;
+                width: 100%;
+                margin-top: 15%;
+                border-radius: 0.1rem;
+                background-color: white;
+            }
+            .line:first-of-type {
+                margin-top: 0;
             }
         }
         a {
@@ -33,6 +50,147 @@ header {
             > * {
                 padding-left: 1rem;
                 padding-right: 1rem;
+            }
+        }
+        .search {
+            margin-right: 1rem;
+            &::before {
+                content: url('icons/search.svg');
+            }
+        }
+        .right {
+            //height: $height;
+            flex: 1 1;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            //padding: 1rem;
+        }
+        .share {
+            border-left: 1px solid lightgray;
+            height: $height;
+            display: flex;
+            align-items: center;
+            > * {
+                padding-left: 1rem;
+            }
+            padding-right: 1rem;
+        }
+        .account {
+            border-left: 1px solid lightgray;
+            height: $height;
+            display: flex;
+            align-items: center;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            &::before {
+                content: url('icons/login.svg');
+            }
+        }
+    }
+}
+
+.icon {
+    &[data-icon="facebook"] {
+        &::before {
+            content: url('icons/facebook.svg');
+        }
+    }
+    &[data-icon="googleplus"] {
+        &::before {
+            content: url('icons/googleplus.svg');
+        }
+    }
+    &[data-icon="twitter"] {
+        &::before {
+            content: url('icons/twitter.svg');
+        }
+    }
+    &[data-icon="home"]::before {
+        content: url('icons/home.svg');
+    }
+    &[data-icon="shop"]::before {
+        content: url('icons/shop.svg');
+    }
+    &[data-icon="note"]::before {
+        content: url('icons/note.svg');
+    }
+    &[data-icon="users"]::before {
+        content: url('icons/users.svg');
+    }
+    &[data-icon="trophy"]::before {
+        content: url('icons/trophy.svg');
+    }
+    &[data-icon="info"]::before {
+        content: url('icons/info.svg');
+    }
+    &[data-icon="email"]::before {
+        content: url('icons/email.svg');
+    }
+    &[data-icon="phone"]::before {
+        content: url('icons/phone.svg');
+    }
+}
+
+.arow {
+    width: $section_width;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    margin-bottom: 0.5rem;
+}
+
+.sidemenu {
+    background-color: white;
+    min-width: 25%;
+    .menu {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        > li {
+            padding: 0.5rem;
+            padding-left: 3rem;
+            border-bottom: 1px solid lightgray;
+            position: relative;
+            @extend .icon;
+            &::before {
+                display: block;
+                content: "";
+                position: absolute;
+                left: 0rem;
+                width: 3rem;
+                text-align: center;
+            }
+            &:hover {
+                background-color: #56ccc8;
+                color: white;
+                &::before {
+                    filter: brightness(0) invert(1);
+                }
+            }
+        }
+    }
+    .contacts {
+        background-color: #c5cdd1;
+        margin: 0;
+        list-style-type: none;
+        padding-left: 0;
+        > li {
+            padding: 0.5rem;
+            padding-left: 3rem;
+            border-bottom: 1px solid lightgray;
+            position: relative;
+            &::before {
+                display: block;
+                //content: "";
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                left: 0rem;
+                width: 3rem;
+                height: 100%;
+                text-align: center;
             }
         }
     }
