--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,18 @@
 $section_width: 80%;
 
 
+
 $color_1: #56ccc8;
+$bgcolor_1: #152840;
+
+a {
+    color: unset;
+    &:hover {
+        color: $color_1;
+        text-decoration: none;
+    }
+}
+
 body {
     background-color: #4a647f;
     //padding: 3rem;
@@ -153,13 +164,21 @@ header {
     margin-right: auto;
     display: flex;
     margin-bottom: 0.5rem;
+    > * {
+        flex: 1 0 auto;
+    }
 }
 
 .sidemenu {
-    background-color: white;
-    min-width: 25%;
+    background-color: #c5cdd1;
+    min-width: 24%;
+    //font-size: 0.8rem;
     .menu {
+        background-color: white;
         list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: stretch;
         margin: 0;
         padding: 0;
         > li {
@@ -186,7 +205,6 @@ header {
         }
     }
     .contacts {
-        background-color: #c5cdd1;
         color: white;
         margin: 0;
         list-style-type: none;
@@ -213,6 +231,93 @@ header {
                 height: 100%;
                 text-align: center;
             }
+        }
+    }
+}
+
+.submenu {
+    min-width: 25%;
+    background-color: $bgcolor_1;
+    list-style-type: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    a {
+        border-bottom: 1px solid #49657d;
+        display: block;
+        padding-left: 1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        &:hover {
+            background-color: #263a54;
+        }
+    }
+    &, a {
+        color: white;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+    .submenu_title {
+        color: $color_1;
+        &::after {
+            display: block;
+            content: url(icons/arrow.svg);
+            float: right;
+            margin-right: 1rem;
+        }
+    }
+    > li ul {
+        list-style-type: none;
+        padding-left: 0;
+    }
+}
+.contact_widgets {
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    .social_row {
+        display: flex;
+        flex-direction: row;
+        justify-content: stretch;
+        .social_widgets {
+            margin-left: 1rem;
+             
+            > * {
+                margin-bottom: 1rem;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+            //flex: 1 0 auto;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+}
+.social_menu {
+    flex: 1 1;
+    list-style-type: none;
+    background-color: white;
+    padding-left: 0;
+    padding-right: 1rem;
+    margin-bottom: 0;
+    > li {
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        padding-left: 3rem;
+        position: relative;
+        &::before {
+            content: "fff";
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            text-align: center;
+            width: 3rem;
+            height: 90%;
+            background-color: gray;
+            left: 0;
         }
     }
 }
